--- a/standings.html
+++ b/standings.html
@@ -13,20 +13,20 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <!-- Logo separado -->
+            <!-- Logo -->
             <div class="logo">
                 <img src="img/logo_t_white.png" alt="KickOff Logo">
                 <span class="logo-text">KICKOFF</span>
             </div>
             
-            <!-- Menú central -->
+            <!-- Menu -->
             <div class="nav-links" id="navLinks">
                 <a href="index.html">Home</a>
                 <a href="matches.html">Matches</a>
                 <a href="standings.html">Standings</a>
             </div>
     
-            <!-- Hamburguesa solo para mobile -->
+            <!-- For mobile -->
             <div class="hamburger" id="hamburger">
                 <div class="bar"></div>
                 <div class="bar"></div>
