Manual Standings and Macthes

--- a/standings.html
+++ b/standings.html
@@ -38,6 +38,10 @@
     <main class="main-content">
         <section class="standings-container">
             <h2 class="section-title">Current Standings</h2>
+            <div class="league-switch">
+                <button class="toggle-btn nfl-btn active">NFL</button>
+                <button class="toggle-btn ncaa-btn">NCAA</button>
+            </div>
             <div class="standings-table" id="standingsTable">
                 <!-- JS populated content -->
             </div>
