--- a/matches.html
+++ b/matches.html
@@ -32,6 +32,7 @@
 
     <main class="main-content">
         <section class="matches-section">
+            <h2 class="section-title">Current Matches</h2>
             <div class="league-toggle">
                 <button class="toggle-btn active" data-league="nfl">NFL</button>
                 <button class="toggle-btn" data-league="ncaa">NCAA</button>
