NavBar Menu for Mobile

--- a/matches.html
+++ b/matches.html
@@ -17,11 +17,13 @@
                 <img src="img/logo_t_white.png" alt="KickOff Logo">
                 <span class="logo-text">KICKOFF</span>
             </div>
+            
             <div class="nav-links" id="navLinks">
                 <a href="index.html">Home</a>
                 <a href="matches.html">Matches</a>
                 <a href="standings.html">Standings</a>
             </div>
+
             <div class="hamburger" id="hamburger">
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -58,5 +60,6 @@
 
     <script src="js/security.js"></script>
     <script src="js/matches.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 </html>
