--- a/standings.html
+++ b/standings.html
@@ -50,5 +50,6 @@
 
     <script src="js/security.js"></script>
     <script src="js/standings.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 </html>
