--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                 <a href="standings.html">Standings</a>
             </div>
     
-            <!-- For mobile -->
             <div class="hamburger" id="hamburger">
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -43,5 +42,6 @@
     
     <script src="js/security.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 </html>
