--- a/matches.html
+++ b/matches.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/logo_t_black.png" media="(prefers-color-scheme: light)">
-    <link rel="icon" href="img/logo_t_white.png" media="(prefers-color-scheme: dark)">
-    <title>KickOff - Home</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lacquer&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/matches.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="img/logo_t_black.png" media="(prefers-color-scheme: light)">
+  <link rel="icon" href="img/logo_t_white.png" media="(prefers-color-scheme: dark)">
+  <title>KickOff - Matches</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lacquer&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/matches.css">
 </head>
 <body>
   <header class="header">
@@ -17,11 +17,13 @@
         <img src="img/logo_t_white.png" alt="KickOff Logo">
         <span class="logo-text">KICKOFF</span>
       </div>
+
       <div class="nav-links" id="navLinks">
         <a href="index.html">Home</a>
         <a href="matches.html">Matches</a>
         <a href="standings.html">Standings</a>
       </div>
+
       <div class="hamburger" id="hamburger">
         <div class="bar"></div>
         <div class="bar"></div>
