--- a/matches.html
+++ b/matches.html
@@ -63,5 +63,6 @@
 
   <script src="js/matches.js"></script>
   <script src="js/nav.js"></script>
+  <script src="js/security.js"></script>
 </body>
 </html>
