--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <a href="index.html">Home</a>
                 <a href="matches.html">Matches</a>
                 <a href="standings.html">Standings</a>
+                <a href="news.html">News</a>
             </div>
             <div class="hamburger" id="hamburger">
                 <div class="bar"></div>
