--- a/standings.html
+++ b/standings.html
@@ -22,6 +22,7 @@
                 <a href="index.html">Home</a>
                 <a href="matches.html">Matches</a>
                 <a href="standings.html">Standings</a>
+                <a href="news.html">News</a>
             </div>
             
             <div class="hamburger" id="hamburger">
