--- a/news.html
+++ b/news.html
@@ -34,6 +34,11 @@
   </header>
 
   <main class="main-content">
+    <section class="schedule-reveals">
+      <h2 class="reveal-title">Top 2025 NFL Schedule Reveals</h2>
+      <div id="revealGrid" class="reveal-grid"></div>
+    </section>  
+
     <section class="news-section">
       <h1 class="section-title">Football News</h1>
       <div id="newsContainer" class="news-grid"></div>
@@ -41,5 +46,6 @@
   </main>
 
   <script src="js/news.js"></script>
+  <script src="js/security.js"></script>
 </body>
 </html>
