--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <section class="hero">
             <h1 class="hero-title">2025 Season</h1>
             <p class="hero-subtitle">Where every play counts</p>
+            <a href="news.html"><button class="hero-button">TOP SCHEDULE REVEALS</button></a>
         </section>
     </main>
     
