--- a/news.html
+++ b/news.html
@@ -47,5 +47,6 @@
 
   <script src="js/news.js"></script>
   <script src="js/security.js"></script>
+  <script src="js/nav.js"></script>
 </body>
 </html>
