--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="KickOff is a modern, responsive web app for NFL fans to follow all the action in one place. View schedules, live scores, weekly matchups, standings, and top football news—plus see detailed play-by-play for every game.
+    Special features include a section with the most creative 2025 NFL schedule reveal videos from each team. Everything is easy to filter, fast to use, and designed for fans who want real-time info and the latest highlights.">
+    <meta name="keywords" content="NFL, Schedule, Standings, News, Play-by-Play, Schedule Reveal, NFL Schedule, NFL Standings, NFL News, NFL Play-by-Play, NFL Schedule Reveal, NFL Schedule Reveal Videos, NFL Schedule Reveal Video, NFL Schedule Reveal Videos, NFL Schedule Reveal Video, NFL Schedule Reveal Videos, NFL Schedule Reveal Video, NFL Schedule Reveal Videos, NFL Schedule Reveal Video, NFL Schedule Reveal Videos, NFL Schedule Reveal Video">
     <link rel="icon" href="img/logo_t_black.png" media="(prefers-color-scheme: light)">
     <link rel="icon" href="img/logo_t_white.png" media="(prefers-color-scheme: dark)">
     <title>KickOff - Home</title>
