--- a/index.html
+++ b/index.html
@@ -39,10 +39,36 @@
             <p class="hero-subtitle">Where every play counts</p>
             <a href="news.html"><button class="hero-button">TOP SCHEDULE REVEALS</button></a>
         </section>
+
+        <section class="countdown-section">
+            <h2 class="countdown-title">NFL Kickoff Countdown</h2>
+            <div class="countdown-cards">
+              <div class="countdown-card">
+                <span id="days">00</span>
+                <small>Days</small>
+              </div>
+              <span class="countdown-colon">:</span>
+              <div class="countdown-card">
+                <span id="hours">00</span>
+                <small>Hours</small>
+              </div>
+              <span class="countdown-colon">:</span>
+              <div class="countdown-card">
+                <span id="minutes">00</span>
+                <small>Minutes</small>
+              </div>
+              <span class="countdown-colon">:</span>
+              <div class="countdown-card">
+                <span id="seconds">00</span>
+                <small>Seconds</small>
+              </div>
+            </div>
+          </section>
     </main>
     
-    <script src="js/security.js"></script>
+
     <script src="js/scripts.js"></script>
     <script src="js/nav.js"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
