--- a/news.html
+++ b/news.html
@@ -48,5 +48,6 @@
   <script src="js/news.js"></script>
   <script src="js/security.js"></script>
   <script src="js/nav.js"></script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
