--- a/standings.html
+++ b/standings.html
@@ -46,5 +46,6 @@
     <script src="js/security.js"></script>
     <script src="js/standings.js"></script>
     <script src="js/nav.js"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
