--- a/matches.html
+++ b/matches.html
@@ -67,5 +67,6 @@
   <script src="js/matches.js"></script>
   <script src="js/nav.js"></script>
   <script src="js/security.js"></script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
