--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </section>
     </main>
     
-
+    <script src="js/security.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/nav.js"></script>
     <script defer src="/_vercel/insights/script.js"></script>
