--- a/matches.html
+++ b/matches.html
@@ -69,4 +69,10 @@
   <script src="js/security.js"></script>
   <script defer src="/_vercel/insights/script.js"></script>
 </body>
+
+<div class="support-banner">
+  <span>💬 For bugs, questions or support, contact: <a href="mailto:support@kickoff.click">support@kickoff.click</a></span>
+</div>
+
+
 </html>
