--- a/news.html
+++ b/news.html
@@ -50,4 +50,10 @@
   <script src="js/nav.js"></script>
   <script defer src="/_vercel/insights/script.js"></script>
 </body>
+
+<div class="support-banner">
+  <span>💬 For bugs, questions or support, contact: <a href="mailto:support@kickoff.click">support@kickoff.click</a></span>
+</div>
+
+
 </html>
