FIXED .html IN URL

--- a/home/index.html
+++ b/home/index.html
@@ -6,24 +6,24 @@
     <meta name="description" content="KickOff is a modern, responsive web app for NFL fans to follow all the action in one place. View schedules, live scores, weekly matchups, standings, and top football news—plus see detailed play-by-play for every game.
     Special features include a section with the most creative 2025 NFL schedule reveal videos from each team. Everything is easy to filter, fast to use, and designed for fans who want real-time info and the latest highlights.">
     <meta name="keywords" content="NFL, Schedule, Standings, News, Play-by-Play, Schedule Reveal, NFL Schedule, NFL Standings, NFL News, NFL Play-by-Play, NFL Schedule Reveal, NFL Schedule Reveal Videos, NFL Schedule Reveal Video, NFL Schedule Reveal Videos, NFL Schedule Reveal Video, NFL Schedule Reveal Videos, NFL Schedule Reveal Video, NFL Schedule Reveal Videos, NFL Schedule Reveal Video, NFL Schedule Reveal Videos, NFL Schedule Reveal Video">
-    <link rel="icon" href="img/logo_t_black.png" media="(prefers-color-scheme: light)">
-    <link rel="icon" href="img/logo_t_white.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" href="/img/logo_t_black.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="/img/logo_t_white.png" media="(prefers-color-scheme: dark)">
     <title>KickOff - Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Lacquer&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="img/logo_t_white.png" alt="KickOff Logo">
+                <img src="/img/logo_t_white.png" alt="KickOff Logo">
                 <span class="logo-text">KICKOFF</span>
             </div>
             <div class="nav-links" id="navLinks">
-                <a href="index.html">Home</a>
-                <a href="matches.html">Matches</a>
-                <a href="standings.html">Standings</a>
-                <a href="news.html">News</a>
+                <a href="/home/">Home</a>
+                <a href="/matches/">Matches</a>
+                <a href="/standings/">Standings</a>
+                <a href="/news/">News</a>
             </div>
             <div class="hamburger" id="hamburger">
                 <div class="bar"></div>
@@ -37,7 +37,7 @@
         <section class="hero">
             <h1 class="hero-title">2025 Season</h1>
             <p class="hero-subtitle">Where every play counts</p>
-            <a href="news.html"><button class="hero-button">TOP SCHEDULE REVEALS</button></a>
+            <a href="/news/"><button class="hero-button">TOP SCHEDULE REVEALS</button></a>
         </section>
 
         <section class="countdown-section">
@@ -66,9 +66,9 @@
           </section>
     </main>
     
-    <script src="js/security.js"></script>
-    <script src="js/scripts.js"></script>
-    <script src="js/nav.js"></script>
+    <script src="/js/security.js"></script>
+    <script src="/js/scripts.js"></script>
+    <script src="/js/nav.js"></script>
     <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
