--- a/standings/index.html
+++ b/standings/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/logo_t_black.png" media="(prefers-color-scheme: light)">
-    <link rel="icon" href="img/logo_t_white.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" href="/img/logo_t_black.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="/img/logo_t_white.png" media="(prefers-color-scheme: dark)">
     <title>KickOff - Standings</title>
     <link href="https://fonts.googleapis.com/css2?family=Lacquer&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/standings.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/standings.css">
 </head>
 <body>
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="img/logo_t_white.png" alt="KickOff Logo">
+                <img src="/img/logo_t_white.png" alt="KickOff Logo">
                 <span class="logo-text">KICKOFF</span>
             </div>
             
             <div class="nav-links" id="navLinks">
-                <a href="index.html">Home</a>
-                <a href="matches.html">Matches</a>
-                <a href="standings.html">Standings</a>
-                <a href="news.html">News</a>
+                <a href="/home/">Home</a>
+                <a href="/matches/">Matches</a>
+                <a href="/standings/">Standings</a>
+                <a href="/news/">News</a>
             </div>
             
             <div class="hamburger" id="hamburger">
@@ -43,9 +43,9 @@
         </section>
     </main>
 
-    <script src="js/security.js"></script>
-    <script src="js/standings.js"></script>
-    <script src="js/nav.js"></script>
+    <script src="/js/security.js"></script>
+    <script src="/js/standings.js"></script>
+    <script src="/js/nav.js"></script>
     <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
