--- a/matches/index.html
+++ b/matches/index.html
@@ -66,7 +66,8 @@
 
   <script src="/js/matches.js"></script>
   <script src="/js/nav.js"></script>
-  <script src="/js/security.js"></script>
+  <script src="/js/securty.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
