--- a/standings/index.html
+++ b/standings/index.html
@@ -43,7 +43,7 @@
         </section>
     </main>
 
-    <script src="/js/security.js"></script>
+    <script src="/js/securty.js"></script>
     <script src="/js/standings.js"></script>
     <script src="/js/nav.js"></script>
     <script defer src="/_vercel/insights/script.js"></script>
