--- a/matches/index.html
+++ b/matches/index.html
@@ -43,6 +43,7 @@
 
       <div class="league-toggle">
         <button class="toggle-btn active" data-league="nfl">NFL</button>
+        <button class="toggle-btn" data-league="cfb">NCAA</button>
       </div>
 
       <div class="filters">
