Navigation mobile changes, added ncaa news and fixed some bugs.

--- a/home/index.html
+++ b/home/index.html
@@ -37,7 +37,7 @@
         <section class="hero">
             <h1 class="hero-title">2025 Season</h1>
             <p class="hero-subtitle">Where every play counts</p>
-            <a href="/news/"><button class="hero-button">TOP SCHEDULE REVEALS</button></a>
+            <a href="/matches/"><button class="hero-button">TIME FOR SOME PRESEASON CHAOS</button></a>
         </section>
 
         <section class="countdown-section">
@@ -66,7 +66,6 @@
           </section>
     </main>
     
-    <script src="/js/security.js"></script>
     <script src="/js/scripts.js"></script>
     <script src="/js/nav.js"></script>
     <script defer src="/_vercel/insights/script.js"></script>
