--- a/home/index.html
+++ b/home/index.html
@@ -72,7 +72,7 @@
 </body>
 
 <div class="support-banner">
-  <span>💬 For bugs, questions or support, contact: <a href="mailto:support@kickoff.click">support@kickoff.click</a></span>
+  <span>💬 For bugs, feedback or support, contact: <a href="mailto:support@kickoff.click">support@kickoff.click</a></span>
 </div>
 
 </html>
