--- a/standings/index.html
+++ b/standings/index.html
@@ -49,8 +49,6 @@
 </body>
 
 <div class="support-banner">
-    <span>💬 For bugs, questions or support, contact: <a href="mailto:support@kickoff.click">support@kickoff.click</a></span>
-  </div>
-  
-  
+    <span>💬 For bugs, feedback or support, contact: <a href="mailto:support@kickoff.click">support@kickoff.click</a></span>
+</div>
 </html>
