--- a/404.html
+++ b/404.html
@@ -1,22 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="img/logo_t_black.png" media="(prefers-color-scheme: light)">
-  <link rel="icon" href="img/logo_t_white.png" media="(prefers-color-scheme: dark)">
-  <title>404 Page Not Found</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>404 - Page Not Found</title>
   <link rel="stylesheet" href="/css/404.css">
+  <link rel="icon" href="/img/logo_t_black.png" media="(prefers-color-scheme: light)">
+  <link rel="icon" href="/img/logo_t_white.png" media="(prefers-color-scheme: dark)">
 </head>
 <body>
-    <div class="noise"></div>
-    <div class="overlay"></div>
-    <div class="terminal">
-      <h1>Error <span class="errorcode">404</span></h1>
-      <p class="output">The page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
-      <p class="output">Please try to <a href="/home/">go back</a> or <a href="/home/">return to the homepage</a>.</p>
-      <p class="output">Good luck.</p>
+  <div class="text"><p>404</p></div>
+  <div class="container">
+    <!-- caveman left -->
+    <div class="caveman">
+      <div class="leg">
+        <div class="foot"><div class="fingers"></div></div>      
+      </div>
+      <div class="leg">
+        <div class="foot"><div class="fingers"></div></div>      
+      </div>
+      <div class="shape">
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
+      <div class="head">
+        <div class="eye"><div class="nose"></div></div>
+        <div class="mouth"></div>
+      </div>
+      <div class="arm-right"><div class="club"></div></div>    
     </div>
+    <!-- caveman right -->
+    <div class="caveman">
+      <div class="leg">
+        <div class="foot"><div class="fingers"></div></div>      
+      </div>
+      <div class="leg">
+        <div class="foot"><div class="fingers"></div></div>      
+      </div>
+      <div class="shape">
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
+      <div class="head">
+        <div class="eye"><div class="nose"></div></div>
+        <div class="mouth"></div>
+      </div>
+      <div class="arm-right"><div class="club"></div></div>    
+    </div>
+  </div>
 </body>
-<script>document.body.classList.add('noscroll');</script>
 </html>
