--- a/matches/index.html
+++ b/matches/index.html
@@ -68,9 +68,9 @@
     </section>
   </main>
 
-
   <script src="/js/matches.js"></script>
   <script src="/js/nav.js"></script>
+  <script src="/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script defer src="/_vercel/insights/script.js"></script>
 </body>
