--- a/standings/index.html
+++ b/standings/index.html
@@ -36,8 +36,8 @@
     <main class="main-content">
         <section class="standings-container">
             <h2 class="section-title">Current Standings</h2>
-            <div class="league-switch">
-                <button class="toggle-btn nfl-btn active">NFL</button>
+            <div class="league-toggle">
+                <button class="toggle-btn active" data-league="nfl">NFL</button>
             </div>
             <div class="standings-grid" id="standingsGrid"></div>
         </section>
