--- a/home/index.html
+++ b/home/index.html
@@ -14,23 +14,17 @@
 </head>
 <body>
     <header class="header">
-        <nav class="navbar">
-            <div class="logo">
-                <img src="/img/logo_t_white.png" alt="KickOff Logo">
-                <span class="logo-text">KICKOFF</span>
-            </div>
-            <div class="nav-links" id="navLinks">
-                <a href="/home/">Home</a>
-                <a href="/matches/">Matches</a>
-                <a href="/standings/">Standings</a>
-                <a href="/news/">News</a>
-            </div>
-            <div class="hamburger" id="hamburger">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
-        </nav>
+      <nav class="navbar">
+        <div class="logo">
+          <a href="/home"><img src="/img/logo_t_white.png" alt="KickOff Logo"></a>
+        </div>
+  
+        <div class="nav-links" id="navLinks">
+          <a href="/matches/">Matches</a>
+          <a href="/standings/">Standings</a>
+          <a href="/news/">News</a>
+        </div>
+      </nav>
     </header>
 
     <main class="main-content">
@@ -40,7 +34,7 @@
             <a href="/matches/"><button class="hero-button">TIME FOR SOME PRESEASON CHAOS</button></a>
         </section>
 
-        <section class="countdown-section">
+        <!--<section class="countdown-section">
             <h2 class="countdown-title">NFL Kickoff Countdown</h2>
             <div class="countdown-cards">
               <div class="countdown-card">
@@ -63,7 +57,7 @@
                 <small>Seconds</small>
               </div>
             </div>
-          </section>
+          </section>-->
     </main>
     
     <script src="/js/scripts.js"></script>
