--- a/standings/index.html
+++ b/standings/index.html
@@ -14,21 +14,13 @@
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="/img/logo_t_white.png" alt="KickOff Logo">
-                <span class="logo-text">KICKOFF</span>
+                <a href="/home"><img src="/img/logo_t_white.png" alt="KickOff Logo"></a>
             </div>
-            
+
             <div class="nav-links" id="navLinks">
-                <a href="/home/">Home</a>
                 <a href="/matches/">Matches</a>
                 <a href="/standings/">Standings</a>
                 <a href="/news/">News</a>
-            </div>
-            
-            <div class="hamburger" id="hamburger">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
             </div>
         </nav>
     </header>
