--- a/matches/index.html
+++ b/matches/index.html
@@ -61,7 +61,7 @@
   </main>
 
   <script src="/js/matches.js"></script>
-  <script src="/js/script.js"></script>
+  <script src="/js/scripts.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script defer src="/_vercel/insights/script.js"></script>
 </body>
