--- a/matches/index.html
+++ b/matches/index.html
@@ -31,11 +31,10 @@
       
 
     <section class="matches-section">
-      <h2 class="section-title">Current Matches</h2>
+      <h2 class="section-title">Matches</h2>
 
       <div class="league-toggle">
         <button class="toggle-btn active" data-league="nfl">NFL</button>
-        <button class="toggle-btn" data-league="cfb">NCAA</button>
       </div>
 
       <div class="filters">
