--- a/standings/index.html
+++ b/standings/index.html
@@ -27,7 +27,7 @@
     
     <main class="main-content">
         <section class="standings-container">
-            <h2 class="section-title">Current Standings</h2>
+            <h2 class="section-title">Standings</h2>
             <div class="league-toggle">
                 <button class="toggle-btn active" data-league="nfl">NFL</button>
             </div>
