--- a/home/index.html
+++ b/home/index.html
@@ -31,7 +31,7 @@
         <section class="hero">
             <h1 class="hero-title">2025 Season</h1>
             <p class="hero-subtitle">Where every play counts</p>
-            <a href="/matches/"><button class="hero-button">TIME FOR SOME PRESEASON CHAOS</button></a>
+            <a href="/matches/"><button class="hero-button">THE WAIT IS FINALLY OVER</button></a>
         </section>
 
         <!--<section class="countdown-section">
